@@ -103,7 +103,7 @@ annotation|@
 name|Private
 annotation|@
 name|Unstable
-DECL|method|newInstance ( ApplicationAttemptId applicationAttemptId, String host, int rpcPort, String url, String oUrl, String diagnostics, YarnApplicationAttemptState state, ContainerId amContainerId)
+DECL|method|newInstance ( ApplicationAttemptId applicationAttemptId, String host, int rpcPort, String url, String oUrl, String diagnostics, YarnApplicationAttemptState state, ContainerId amContainerId, long startTime, long finishTime)
 specifier|public
 specifier|static
 name|ApplicationAttemptReport
@@ -132,6 +132,12 @@ name|state
 parameter_list|,
 name|ContainerId
 name|amContainerId
+parameter_list|,
+name|long
+name|startTime
+parameter_list|,
+name|long
+name|finishTime
 parameter_list|)
 block|{
 name|ApplicationAttemptReport
@@ -202,8 +208,78 @@ argument_list|(
 name|amContainerId
 argument_list|)
 expr_stmt|;
+name|report
+operator|.
+name|setStartTime
+argument_list|(
+name|startTime
+argument_list|)
+expr_stmt|;
+name|report
+operator|.
+name|setFinishTime
+argument_list|(
+name|finishTime
+argument_list|)
+expr_stmt|;
 return|return
 name|report
+return|;
+block|}
+DECL|method|newInstance ( ApplicationAttemptId applicationAttemptId, String host, int rpcPort, String url, String oUrl, String diagnostics, YarnApplicationAttemptState state, ContainerId amContainerId)
+specifier|public
+specifier|static
+name|ApplicationAttemptReport
+name|newInstance
+parameter_list|(
+name|ApplicationAttemptId
+name|applicationAttemptId
+parameter_list|,
+name|String
+name|host
+parameter_list|,
+name|int
+name|rpcPort
+parameter_list|,
+name|String
+name|url
+parameter_list|,
+name|String
+name|oUrl
+parameter_list|,
+name|String
+name|diagnostics
+parameter_list|,
+name|YarnApplicationAttemptState
+name|state
+parameter_list|,
+name|ContainerId
+name|amContainerId
+parameter_list|)
+block|{
+return|return
+name|newInstance
+argument_list|(
+name|applicationAttemptId
+argument_list|,
+name|host
+argument_list|,
+name|rpcPort
+argument_list|,
+name|url
+argument_list|,
+name|oUrl
+argument_list|,
+name|diagnostics
+argument_list|,
+name|state
+argument_list|,
+name|amContainerId
+argument_list|,
+literal|0L
+argument_list|,
+literal|0L
+argument_list|)
 return|;
 block|}
 comment|/**    * Get the<em>YarnApplicationAttemptState</em> of the application attempt.    *     * @return<em>YarnApplicationAttemptState</em> of the application attempt    */
@@ -412,6 +488,57 @@ name|setAMContainerId
 parameter_list|(
 name|ContainerId
 name|amContainerId
+parameter_list|)
+function_decl|;
+annotation|@
+name|Public
+annotation|@
+name|Unstable
+DECL|method|getStartTime ()
+specifier|public
+specifier|abstract
+name|long
+name|getStartTime
+parameter_list|()
+function_decl|;
+annotation|@
+name|Private
+annotation|@
+name|Unstable
+DECL|method|setStartTime (long startTime)
+specifier|public
+specifier|abstract
+name|void
+name|setStartTime
+parameter_list|(
+name|long
+name|startTime
+parameter_list|)
+function_decl|;
+comment|/**    * Get the<em>finish time</em> of the application.    *     * @return<em>finish time</em> of the application    */
+annotation|@
+name|Public
+annotation|@
+name|Unstable
+DECL|method|getFinishTime ()
+specifier|public
+specifier|abstract
+name|long
+name|getFinishTime
+parameter_list|()
+function_decl|;
+annotation|@
+name|Private
+annotation|@
+name|Unstable
+DECL|method|setFinishTime (long finishTime)
+specifier|public
+specifier|abstract
+name|void
+name|setFinishTime
+parameter_list|(
+name|long
+name|finishTime
 parameter_list|)
 function_decl|;
 block|}
