@@ -1266,6 +1266,98 @@ operator|=
 name|amContainerId
 expr_stmt|;
 block|}
+annotation|@
+name|Override
+DECL|method|setStartTime (long startTime)
+specifier|public
+name|void
+name|setStartTime
+parameter_list|(
+name|long
+name|startTime
+parameter_list|)
+block|{
+name|maybeInitBuilder
+argument_list|()
+expr_stmt|;
+name|builder
+operator|.
+name|setStartTime
+argument_list|(
+name|startTime
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|setFinishTime (long finishTime)
+specifier|public
+name|void
+name|setFinishTime
+parameter_list|(
+name|long
+name|finishTime
+parameter_list|)
+block|{
+name|maybeInitBuilder
+argument_list|()
+expr_stmt|;
+name|builder
+operator|.
+name|setFinishTime
+argument_list|(
+name|finishTime
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getStartTime ()
+specifier|public
+name|long
+name|getStartTime
+parameter_list|()
+block|{
+name|ApplicationAttemptReportProtoOrBuilder
+name|p
+init|=
+name|viaProto
+condition|?
+name|proto
+else|:
+name|builder
+decl_stmt|;
+return|return
+name|p
+operator|.
+name|getStartTime
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getFinishTime ()
+specifier|public
+name|long
+name|getFinishTime
+parameter_list|()
+block|{
+name|ApplicationAttemptReportProtoOrBuilder
+name|p
+init|=
+name|viaProto
+condition|?
+name|proto
+else|:
+name|builder
+decl_stmt|;
+return|return
+name|p
+operator|.
+name|getFinishTime
+argument_list|()
+return|;
+block|}
 block|}
 end_class
 
