@@ -450,6 +450,22 @@ name|yarn
 operator|.
 name|util
 operator|.
+name|Times
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|util
+operator|.
 name|resource
 operator|.
 name|Resources
@@ -1571,6 +1587,54 @@ name|appAttempt
 operator|.
 name|getAppAttemptState
 argument_list|()
+argument_list|)
+operator|.
+name|_
+argument_list|(
+literal|"Started:"
+argument_list|,
+name|Times
+operator|.
+name|format
+argument_list|(
+name|appAttempt
+operator|.
+name|getStartedTime
+argument_list|()
+argument_list|)
+argument_list|)
+operator|.
+name|_
+argument_list|(
+literal|"Elapsed:"
+argument_list|,
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|StringUtils
+operator|.
+name|formatTime
+argument_list|(
+name|Times
+operator|.
+name|elapsed
+argument_list|(
+name|appAttempt
+operator|.
+name|getStartedTime
+argument_list|()
+argument_list|,
+name|appAttempt
+operator|.
+name|getFinishedTime
+argument_list|()
+argument_list|)
+argument_list|)
 argument_list|)
 operator|.
 name|_
